--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,5 +1,5 @@
 .movieCard {
-  width: 25%;
+  width: 50%;
   border-radius: 5px;
   border: 1px solid #f1f1f1;
   display: flex;
@@ -11,6 +11,12 @@
   max-height: 220px;
   overflow: hidden;
   background: #f8f5f0;
+}
+
+@media (min-width: 768px) {
+  .movieCard {
+    width: 25%;
+  }
 }
 
 a,
