--- a/src/components/TurnPage/TurnPage.css
+++ b/src/components/TurnPage/TurnPage.css
@@ -21,4 +21,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20%;
+}
+
+@media (min-width: 768px) {
+  .nextAndPrev {
+    margin-bottom: 16px;
+  }
 }
